2005-03-18  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_irrigate.C (ActionIrrigateSubsoilStart): Removed
	(ActionIrrigateStop): Ditto.

	* field.C, field.h (set_subsoil_irrigation): Removed.

	* column_std.C (irrigate_subsoil): Add solute to fertilizer log.

	* column.h, column_base.C, column_std.C (set_subsoil_irrigation):
	Removed. 

	* bioincorporation.C (N_added, C_added): Fixed dimension.

2005-03-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* units.C (standard_conversions): Added a couple of convertions
	for log variables.

	* phenology_std.C, phenology.h, phenology.C (mature): New member
	function. 
	* crop_std.C (tick): Use it.

2005-03-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* path.C (set_directory): Attempt to create directory if chdir
	fails. 

2005-03-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* horizon_std.C (HorizonStandardSyntax): Added warning for using
	fine and coarse sand.

2005-03-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* sample/dk-soil.dai: Moved here.
	* sample/Makefile (LIBS): Added.
	* lib/dk-soil.dai: From here.
	* lib/Makefile (REMOVE): Added.
	* sample/dk-soil.dai (Jyndevad, (Askov): New columns.
	
2005-02-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.70 released.

2005-02-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* program_document.C (print_sample_entry): Print dimension.

	* action_irrigate.C (struct ActionIrrigate): Write N amount.

	* column_std.C (fertilize): Split out variant that takes an 'IM'
	object.
	(irrigate_surface, irrigate_overhead): Use it.

2005-02-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* xref.C (use_model): Don't use components here.
	(enter_parameter): Always use them here.

	* Version 3.69 released.

2005-02-23  Per Abrahamsen  <abraham@dina.kvl.dk>


	* groundwater.h, groundwater.C (initialize): Made it a pure virtual.
	* groundwater_lysimeter.C (initialize): Implement it.
	(location): New member variable.
	(table): Use it.

	* uzrichard.C (richard): Use a fake pressure bottom when the